--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,16 @@
-@import url('https://fonts.cdnfonts.com/css/general-sans');
+@import url('https://overpass-30e2.kxcdn.com/overpass.css');
 @import "tailwindcss";
 @import 'leaflet/dist/leaflet.css';
 
-*{
+* {
     scroll-behavior: smooth;
     scroll-margin-top: 50px;
-    font-family: 'General Sans', sans-serif;
+    font-family: 'Overpass', sans-serif;
+}
+
+h1,
+h2 {
+    font-weight: 900 !important;
 }
 
 .lucide-icon {
@@ -20,9 +25,12 @@
 
 /* Custom animations */
 @keyframes float {
-    0%, 100% {
+
+    0%,
+    100% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(-10px);
     }
